Implemented get user by id
